// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`popover can have a custom minimum width 1`] = `
<Popper
  appendTo={[Function]}
  distance={25}
  enableFlip={true}
  flipBehavior={
    Array [
      "top",
      "right",
      "bottom",
      "left",
      "top",
      "right",
      "bottom",
    ]
  }
  isVisible={false}
  onDocumentClick={[Function]}
  onDocumentKeyDown={[Function]}
  onTriggerClick={[Function]}
  onTriggerEnter={[Function]}
  placement="top"
  popper={
    <FocusTrap
      active={false}
      aria-describedby="popover-test-body"
      aria-labelledby="popover-test-header"
      aria-modal="true"
      className="pf-c-popover"
      focusTrapOptions={
        Object {
          "clickOutsideDeactivates": true,
          "returnFocusOnDeactivate": true,
        }
      }
      onMouseDown={[Function]}
      paused={false}
      role="dialog"
      style={
        Object {
          "maxWidth": null,
          "minWidth": "600px",
          "opacity": 0,
          "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
        }
      }
    >
      <PopoverArrow />
      <PopoverContent>
        <PopoverCloseButton
          aria-label="Close"
          onClose={[Function]}
        />
        <PopoverHeader
          id="popover-test-header"
        >
          <div>
            Popover Header
          </div>
        </PopoverHeader>
        <PopoverBody
          id="popover-test-body"
        >
          <div>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id feugiat augue, nec fringilla turpis.
          </div>
        </PopoverBody>
      </PopoverContent>
    </FocusTrap>
  }
  popperMatchesTriggerWidth={false}
  positionModifiers={
    Object {
      "bottom": "pf-m-bottom",
      "left": "pf-m-left",
      "right": "pf-m-right",
      "top": "pf-m-top",
    }
  }
  trigger={
    <div>
      Toggle Popover
    </div>
  }
  zIndex={9999}
/>
`;

exports[`popover can specify position as object value 1`] = `
<Popper
  appendTo={[Function]}
  distance={25}
  enableFlip={true}
  flipBehavior={
    Array [
      "top",
      "right",
      "bottom",
      "left",
      "top",
      "right",
      "bottom",
    ]
  }
  isVisible={false}
  onDocumentClick={[Function]}
  onDocumentKeyDown={[Function]}
  onTriggerClick={[Function]}
  onTriggerEnter={[Function]}
  placement="right"
  popper={
    <FocusTrap
      active={false}
      aria-describedby="popover-test-body"
      aria-labelledby="popover-test-header"
      aria-modal="true"
      className="pf-c-popover"
      focusTrapOptions={
        Object {
          "clickOutsideDeactivates": true,
          "returnFocusOnDeactivate": true,
        }
      }
      onMouseDown={[Function]}
      paused={false}
      role="dialog"
      style={
        Object {
          "maxWidth": null,
          "minWidth": null,
          "opacity": 0,
          "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
        }
      }
    >
      <PopoverArrow />
      <PopoverContent>
        <PopoverCloseButton
          aria-label="Close"
          onClose={[Function]}
        />
        <PopoverHeader
          id="popover-test-header"
        >
          <div>
            Popover Header
          </div>
        </PopoverHeader>
        <PopoverBody
          id="popover-test-body"
        >
          <div>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id feugiat augue, nec fringilla turpis.
          </div>
        </PopoverBody>
      </PopoverContent>
    </FocusTrap>
  }
  popperMatchesTriggerWidth={false}
  positionModifiers={
    Object {
      "bottom": "pf-m-bottom",
      "left": "pf-m-left",
      "right": "pf-m-right",
      "top": "pf-m-top",
    }
  }
  trigger={
    <div>
      Toggle Popover
    </div>
  }
  zIndex={9999}
/>
`;

exports[`popover renders close-button, header and body 1`] = `
<Popper
  appendTo={[Function]}
  distance={25}
  enableFlip={true}
  flipBehavior={
    Array [
      "top",
      "right",
      "bottom",
      "left",
      "top",
      "right",
      "bottom",
    ]
  }
  isVisible={false}
  onDocumentClick={[Function]}
  onDocumentKeyDown={[Function]}
  onTriggerClick={[Function]}
  onTriggerEnter={[Function]}
  placement="top"
  popper={
    <FocusTrap
      active={false}
      aria-describedby="popover-test-body"
      aria-labelledby="popover-test-header"
      aria-modal="true"
      className="pf-c-popover"
      focusTrapOptions={
        Object {
          "clickOutsideDeactivates": true,
          "returnFocusOnDeactivate": true,
        }
      }
      onMouseDown={[Function]}
      paused={false}
      role="dialog"
      style={
        Object {
          "maxWidth": null,
          "minWidth": null,
          "opacity": 0,
          "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
        }
      }
    >
      <PopoverArrow />
      <PopoverContent>
        <PopoverCloseButton
          aria-label="Close"
          onClose={[Function]}
        />
        <PopoverHeader
          id="popover-test-header"
        >
          <div>
            Popover Header
          </div>
        </PopoverHeader>
        <PopoverBody
          id="popover-test-body"
        >
          <div>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id feugiat augue, nec fringilla turpis.
          </div>
        </PopoverBody>
      </PopoverContent>
    </FocusTrap>
  }
  popperMatchesTriggerWidth={false}
  positionModifiers={
    Object {
      "bottom": "pf-m-bottom",
      "left": "pf-m-left",
      "right": "pf-m-right",
      "top": "pf-m-top",
    }
  }
  trigger={
    <div>
      Toggle Popover
    </div>
  }
  zIndex={9999}
/>
`;
